fix controls toggle button transparent background effect on ios

--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -47,3 +47,8 @@
   background-color: rgba(0, 0, 0, .5);
   color: white;
 }
+
+.btn--full-see-through {
+  background-color: transparent;
+  color: white;
+}
